--- a/Chat Application with Web Sockets/templates/index.html
+++ b/Chat Application with Web Sockets/templates/index.html
@@ -41,7 +41,7 @@
         if (!window["WebSocket"]) {
         alert("Error: Your browser does not support web sockets.")
         } else {
-        socket = new WebSocket("ws://localhost:3000/room");
+        socket = new WebSocket("ws://{{.Host}}/room");;
         socket.onclose = function() {
         alert("Connection has been closed.");
         }
