--- a/Chat Application/templates/index.html
+++ b/Chat Application/templates/index.html
@@ -14,10 +14,11 @@
        
         <h1>Let's Chat</h1>   
         <ul id="messages"></ul>
-             <form id="chatbox">
+        <form id="chatbox">
+            {{.UserData.name}}:<br/>
             <textarea></textarea>
             <input type="submit" value="Send" />
-            </form>        
+        </form>        
     </body>
 
     <footer>
@@ -34,7 +35,7 @@
         alert("Error: There is no socket connection.");
         return false;
         }
-        socket.send(msgBox.val());
+        socket.send(JSON.stringify({"Message": msgBox.val()}));
         msgBox.val("");
         return false;
         });
@@ -46,7 +47,13 @@
         alert("Connection has been closed.");
         }
         socket.onmessage = function(e) {
-        messages.append($("<li>").text(e.data));
+        var msg = JSON.parse(e.data);
+        messages.append(
+        $("<li>").append(
+        $("<strong>").text(msg.Name + ": "),
+        $("<span>").text(msg.Message)
+        )
+        );
         }
         }
         });
